Z-Index issues

--- a/css/structure.css
+++ b/css/structure.css
@@ -8,7 +8,7 @@ body {
 }
 
 .landing ~ .section {
-  z-index: 1;
+  z-index: 4;
 }
 
 .landing + .section {
@@ -31,7 +31,7 @@ body {
   width: 100%;
   height: 80px;
   line-height: 80px;
-  z-index: 1;
+  z-index: 4;
 }
 
 .header .btn,
